[gd_scene load_steps=10 format=3 uid="uid://r2g1mcl52y5u"]

[ext_resource type="Script" path="res://script/Player.gd" id="1_xoxk8"]
[ext_resource type="PackedScene" uid="uid://j2ooqavbj5ta" path="res://resource/卡通火箭.blend" id="2_215di"]
[ext_resource type="AudioStream" uid="uid://crw10s8t3k3r3" path="res://sound/boom.MP3" id="3_pv7tr"]
[ext_resource type="AudioStream" uid="uid://caw1w0hvp0mve" path="res://sound/sucess.mp3" id="4_tk5o1"]
[ext_resource type="AudioStream" uid="uid://cc7mn4qbsq24m" path="res://sound/fire.mp3" id="5_qeiew"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://particles/booster_particles.tscn" id="6_ds0xa"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://particles/explosion_particles.tscn" id="7_k1q71"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://particles/success_particles.tscn" id="8_t1fdw"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ppsfq"]
height = 3.22
radius = 1.0

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_xoxk8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ppsfq")

[node name="卡通火箭" parent="CollisionShape3D" instance=ExtResource("2_215di")]

[node name="gameFault" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pv7tr")

[node name="succeed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tk5o1")

[node name="fireAcecss" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_qeiew")
unit_size = 34.82

[node name="BoosterParticles" parent="." instance=ExtResource("6_ds0xa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.65458, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("7_k1q71")]

[node name="SuccessParticles" parent="." instance=ExtResource("8_t1fdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.328617)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
